<resources>
    <string name="app_name">Utilities</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Utilities</string>
    <string name="nav_header_subtitle">Users name and apartment number</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="app_home_all_users">Home</string>
    <string name="app_bar_about_all_users">About</string>
    <string name="app_menu_history_user">History</string>
    <string name="app_menu_archive_admin">Archive</string>
    <string name="app_menu_resources_report_user">Resources report</string>
    <string name="app_menu_resource_reports_admin">Resource reports</string>
    <string name="app_menu_settings_user">Settings</string>
    <string name="app_menu_predict_user">Predict</string>
    <string name="app_menu_resource_user">Resources</string>
    <string name="app_bar_settings_user">User settings</string>
    <string name="app_bar_accounts_management_admin">Accounts management</string>
    <string name="authors_name">Moldovan Alexandru-Vasile</string>
    <string name="title_activity_admin">ActivityAdmin</string>
    <string name="action_settings">Settings</string>
    <string name="cubicMetter">m³</string>
    <string name="address">Address:</string>
    <string name="apartment_number">Apartment number:</string>
    <string name="nav_home_user">Home</string>
    <string name="app_home_price_tag_user">Price tags</string>
    <string name="action_info_user">Information</string>
    <string name="electricity">Electricity meter:</string>
    <string name="omni_speech">\t\t\t\tOh, hello !\n\t\t\t\tIt looks like you need more information about what is going on here.\n\t\t\t\tWell, lets start. My name is Omni, cool name, right? Hehe, I knew it ! I am a robot programmed to predict your usage for the next month of water, gas and electricity based on how the weather will be in next month and the resources used by you in the past. If you do not have any past reports, I will predict the usage of the resources depending on the weather. \n\t\t\t\tHmmm...I think that is all. Thank you for dropping by. Have a nice day !</string>
    <string name="kw">kW</string>
    <string name="prediction_of_resurces_future">\t\t\t\tPrediction of resources that will be used next month:</string>
    <string name="app_menu_log_off">Log out</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_password">Change password</string>
    <string name="pass_admin_role">Pass admin role</string>
    <string name="new_name">New name</string>
    <string name="edit_family_name">Edit first name:</string>
    <string name="create_an_account">Create account</string>
    <string name="delete_account">Delete account</string>
    <string name="username">Username</string>
    <string name="create_account">Create account</string>
    <string name="events">Events</string>
</resources>
