<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/nav_home_user">
        <menu>
            <item
                android:id="@+id/nav_home_user"
                android:icon="@drawable/ic_home"
                android:title="@string/app_home_all_users" />
            <item
                android:id="@+id/nav_event_admin"
                android:icon="@drawable/ic_event"
                android:title="@string/events" />
        </menu>
    </item>

    <item android:title="@string/app_menu_resource_user">
        <menu>

            <item
                android:id="@+id/nav_payment_status_admin"
                android:icon="@drawable/ic_calendar"
                android:title="@string/app_menu_resource_reports_admin" />

            <item
                android:id="@+id/nav_archive_admin"
                android:icon="@drawable/ic_archive"
                android:title="@string/app_menu_archive_admin" />


        </menu>
    </item>
    <item android:title="@string/app_menu_settings_user">
        <menu>
            <item
                android:id="@+id/nav_settings_admin"
                android:icon="@drawable/ic_settings"
                android:title="@string/app_menu_settings_user" />

            <item
                android:id="@+id/nav_account_management_admin"
                android:icon="@drawable/ic_account"
                android:title="@string/app_bar_accounts_management_admin" />

            <item
                android:id="@+id/nav_logoff_admin"
                android:icon="@drawable/ic_exit"
                android:title="@string/app_menu_log_off" />
        </menu>
    </item>

</menu>
