<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#4D000000">

    <RelativeLayout
        android:layout_width="260dp"
        android:layout_height="296dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp">

        <EditText
            android:id="@+id/oldPasswordTextInputAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            android:textColorHint="@color/white"
            android:ems="10"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/ic_action_name"/>

        <EditText
            android:id="@+id/newPasswordTextInputAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="92dp"
            android:textColorHint="@color/white"
            android:drawableLeft="@drawable/ic_action_name"
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/confirmPasswordTextInputAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="90dp"
            android:drawableLeft="@drawable/ic_action_name"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@color/white" />
    </RelativeLayout>


    <android.support.v7.widget.CardView
        android:layout_width="255dp"
        android:layout_height="41dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="159dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="checkPasswordsAdmin"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/change_password"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="255dp"
        android:layout_height="41dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="59dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="goToSettingsAdmin"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Back"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>